crates/ty_python_semantic/resources/mdtest/snapshots/For_loops_-_for.md_-_Union_type_as_iterab…_(d8e2ed7d85f0175f).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: For loops - for.md - Union type as iterable where one union element has invalid `__iter__` method
mdtest path: crates/ty_python_semantic/resources/mdtest/loops/for.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import reveal_type
 2 | 
 3 | class TestIter:
 4 |     def __next__(self) -> int:
 5 |         return 42
 6 | 
 7 | class Test:
 8 |     def __iter__(self) -> TestIter:
 9 |         return TestIter()
10 | 
11 | class Test2:
12 |     def __iter__(self) -> int:
13 |         return 42
14 | 
15 | def _(flag: bool):
16 |     # TODO: Improve error message to state which union variant isn't iterable (https://github.com/astral-sh/ruff/issues/13989)
17 |     # error: [not-iterable]
18 |     for x in Test() if flag else Test2():
19 |         reveal_type(x)  # revealed: int
```

# Diagnostics

```
error[not-iterable]: Object of type `Test | Test2` may not be iterable
  --> src/mdtest_snippet.py:18:14
   |
16 |     # TODO: Improve error message to state which union variant isn't iterable (https://github.com/astral-sh/ruff/issues/13989)
17 |     # error: [not-iterable]
18 |     for x in Test() if flag else Test2():
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^
19 |         reveal_type(x)  # revealed: int
   |
info: Its `__iter__` method returns an object of type `TestIter | int`, which may not have a `__next__` method
info: rule `not-iterable` is enabled by default

```

```
info[revealed-type]: Revealed type
  --> src/mdtest_snippet.py:19:21
   |
17 |     # error: [not-iterable]
18 |     for x in Test() if flag else Test2():
19 |         reveal_type(x)  # revealed: int
   |                     ^ `int`
   |

```
